# INFOTECS

./: README.md  alembic.ini  main.py  pyproject.toml  weather.db
alembic/: env.py
alembic/versions/: 6c7ad1e14359_create_tables.py
src/: background_tasks.py  dependencies.py  enums.py  logging.py  use_cases.py
src/api/: city.py  weather.py
src/database/: session.py
src/database/models/: cities.py  weather.py
src/database/repositories/: cities.py  weather_data.py
src/exceptions/: city.py  handlers.py  http.py  repository.py  weather.py
src/mappers/: city.py  weather.py
src/schemas/requests/: city.py
src/schemas/responses/: city.py  weather.py
src/use_cases/: city_service.py  create_new_city.py  current_weather.py  fetch_coordinates.py  fetch_weather_data.py  get_city_list.py  weather_by_city_name.py
