[project]
name = "infotecs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.1",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "ruff>=0.14.14",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
